--- a/Greenlight/Greenlight/Views/Games/Edit.cshtml
+++ b/Greenlight/Greenlight/Views/Games/Edit.cshtml
@@ -44,8 +44,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ImagePath, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ImagePath, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ImagePath, "", new { @class = "text-danger" })
+                <input type="file" name="file" />
             </div>
         </div>
 
