--- a/Greenlight/Greenlight/Views/Games/CustomerDetails.cshtml
+++ b/Greenlight/Greenlight/Views/Games/CustomerDetails.cshtml
@@ -62,10 +62,7 @@
 </div>
 
 <p>
-
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "CustomerIndex")
 </p>
 
 
