--- a/Greenlight/Greenlight/Views/Home/Contact.cshtml
+++ b/Greenlight/Greenlight/Views/Home/Contact.cshtml
@@ -2,16 +2,10 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    333 N Plankinton Ave<br />
+    Milwaukee, WI 53203<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    414.533.0623
 </address>
