--- a/Greenlight/Greenlight/Views/Shared/Error.cshtml
+++ b/Greenlight/Greenlight/Views/Shared/Error.cshtml
@@ -4,6 +4,9 @@
     ViewBag.Title = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h3>Sorry about that!</h3>
+<p>
+    We've hit an unexpected error!
+    <a href="javascript:history.go(-1)">Click here</a> if you'd like to go back and try again!
+</p>
 
