--- a/Greenlight/Greenlight/Views/ShoppingCart/Index.cshtml
+++ b/Greenlight/Greenlight/Views/ShoppingCart/Index.cshtml
@@ -2,7 +2,7 @@
 @{ 
     ViewBag.Title = "Shopping Cart";
 }
-<script src="~/Scripts/jquery-2.2.1.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script type="text/javascript">
     $(function () {
         $(".RemoveLink").click(function () {
@@ -11,13 +11,13 @@
                 $.post("/ShoppingCart/RemoveFromCart", { "id": recordToDelete },
                     function (data) {
                         if (data.ItemCount == 0) {
-                            $('#row-' + data.DeleteID).fadeOut('slow');
+                            $('#row-' + data.DeleteId).fadeOut('slow');
                         } else {
-                            $('#item-count-' + data.DeleteID).text(data.ItemCount);
+                            $('#item-count-' + data.DeleteId).text(data.ItemCount);
                         }
                         $('#cart-total').text(data.CartTotal);
                         $('#update-message').text(data.Message);
-                        $('#cart-status').text('Cart (' + data.CartCount + ')');
+                        $('#cart-status').text(data.CartCount);
                     });
             }
         });
@@ -25,9 +25,7 @@
 </script>
 
 <h3><em>Review Your Cart:</em></h3>
-<p class="btn">
-    @Html.ActionLink("Checkout>>", "AddressAndPayment", "Checkout")
-</p>
+
 <div id="update-message"></div>
 <table class="table table-condensed">
     <tr>
@@ -67,3 +65,4 @@
         </td>
     </tr>
 </table>
+<button type="button" class="btn btn-success btn-sm" onclick="location.href='@Url.Action("AddressAndPayment", "Checkout")'">Checkout >></button>
