--- a/Greenlight/Greenlight/Views/Home/Index.cshtml
+++ b/Greenlight/Greenlight/Views/Home/Index.cshtml
@@ -3,15 +3,15 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <img src="~/Images/original.jpg" alt="Steam Library"/>
 </div>
 
-<div class="row">
-    <div class="col-md-12">
-        <h3>
-            <p>Special Sale! Enter the Promo Code "FreeTax" to have all Sales Tax waived for your order from Now until 3/21</p>
-        </h3>
+<div class="row text-center">
+    <div class="col-md-1"></div>
+    <div class="col-md-10">
+        <h1>
+            Pi Sale! 
+        </h1>
+        <p>Enter the Promo Code "FreeTax" to have all Sales Tax waived for your order from 3/14 until 3/21!</p>
     </div>
 </div>
