--- a/Greenlight/Greenlight/Views/Checkout/Pay.cshtml
+++ b/Greenlight/Greenlight/Views/Checkout/Pay.cshtml
@@ -66,7 +66,7 @@
                     <input type="hidden" name="cmd" value=_cart>
                     <input type="hidden" name="upload" value="1">
                     <input type="hidden" name="lc" value="US">
-                    <input type="hidden" name="amount_x" value="@Html.DisplayFor(modelItem => modelItem.CartTotal)" >
+                    <input type="hidden" name="amount_x" value="@Html.DisplayFor(Model => Model.CartTotal)" />
                     <input type="hidden" name="tax_rate" value="5.600">
                     <input type="hidden" name="business" value="dzanfox-facilitator@gmail.com">
                     <input type="hidden" name="return" value="http://localhost:43300/Checkout/Complete">
