--- a/Greenlight/Greenlight/Views/Paypal/Success.cshtml
+++ b/Greenlight/Greenlight/Views/Paypal/Success.cshtml
@@ -4,5 +4,5 @@
 
 <h2>Payment Successful</h2>
 <p>Thank you for your purchase!</p>
-<p><a href="@item.GameFile" download>Download your game</a></p>
+<p><a href="~/GameFile/full1.jpg" download>Download your game</a></p>
 <p>How about getting another game in our @Html.ActionLink("store!", "Index", "Home")</p>
