--- a/Greenlight/Greenlight/Views/Checkout/AddressAndPayment.cshtml
+++ b/Greenlight/Greenlight/Views/Checkout/AddressAndPayment.cshtml
@@ -9,7 +9,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <h2>Address and Payment</h2>
     <fieldset>
         <legend>Billing Information</legend>
@@ -17,7 +17,9 @@
         <div class="form-group">
             <div class="col-md-10">
                 <br />
+                @Html.BeginForm("PayWithPaypal", "Paypal"){
                 <input type='image' name='submit' src='https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif' border='0' align='top' alt='Check out with PayPal' />
+                }
             </div>
         </div>
     </fieldset>
@@ -30,9 +32,9 @@
         <div class="editor-field">
             @Html.TextBox("PromoCode")
         </div>
-
+        <input type="button" class="btn btn-sm btn-success" value="Submit Order" />
     </fieldset>
-    
+
 }
 
 
