--- a/Greenlight/Greenlight/Views/Games/CustomerIndex.cshtml
+++ b/Greenlight/Greenlight/Views/Games/CustomerIndex.cshtml
@@ -28,6 +28,7 @@
         </th>
         <th></th>
     </tr>
+    <button href="@Url.Action()"></button>
 
     @foreach (var item in Model)
     {
