--- a/Greenlight/Greenlight/Views/Home/Index.cshtml
+++ b/Greenlight/Greenlight/Views/Home/Index.cshtml
@@ -12,6 +12,6 @@
         <h1>
             Pi Sale! 
         </h1>
-        <p>Enter the Promo Code "FreeTax" to have all Sales Tax waived for your order from 3/14 until 3/21!</p>
+        <p>All Sales Tax is waived for your order from 3/14 until 3/21!</p>
     </div>
 </div>
