--- a/Greenlight/Greenlight/Views/Checkout/AddressAndPayment.cshtml
+++ b/Greenlight/Greenlight/Views/Checkout/AddressAndPayment.cshtml
@@ -6,7 +6,7 @@
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("AddressAndPayment", "Checkout", new { @class = "form-horizontal" }))
 {
     @Html.AntiForgeryToken()
 
@@ -15,24 +15,11 @@
         <legend>Billing Information</legend>
         @Html.EditorForModel()
         <div class="form-group">
-            <div class="col-md-10">
+            <div>
                 <br />
-                @Html.BeginForm("PayWithPaypal", "Paypal"){
-                <input type='image' name='submit' src='https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif' border='0' align='top' alt='Check out with PayPal' />
-                }
+               
             </div>
         </div>
-    </fieldset>
-    <fieldset>
-        <legend>Payment</legend>
-        <p>We're running a special promotion: all tax is waived with the promo code: "FreeTax"</p>
-        <div class="editor-label">
-            @Html.Label("Promo Code");
-        </div>
-        <div class="editor-field">
-            @Html.TextBox("PromoCode")
-        </div>
-        <input type="button" class="btn btn-sm btn-success" value="Submit Order" />
     </fieldset>
 
 }
