--- a/Greenlight/Greenlight/Views/Paypal/Success.cshtml
+++ b/Greenlight/Greenlight/Views/Paypal/Success.cshtml
@@ -1,8 +1,9 @@
-﻿@{
+﻿@model Greenlight.Models.Game
+@{
     ViewBag.Title = "Checkout Complete";
 }
 
 <h2>Payment Successful</h2>
 <p>Thank you for your purchase!</p>
-<p><a href="~/GameFile/full1.jpg" download>Download your game</a></p>
+<p><a href="@Model.FullGame" download>Download your game</a></p>
 <p>How about getting another game in our @Html.ActionLink("store!", "Index", "Home")</p>
