--- a/Greenlight/Greenlight/Views/ShoppingCart/Index.cshtml
+++ b/Greenlight/Greenlight/Views/ShoppingCart/Index.cshtml
@@ -67,6 +67,19 @@
                 </td>
             </tr>
         </table>
-        <button type="button" class="btn btn-success btn-sm" onclick="location.href='@Url.Action("AddressAndPayment", "Checkout")'">Checkout >></button>
+        <form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
+            <input type="hidden" name="cmd" value="_xclick">
+            <input type="hidden" name="business" value="dzanfox-facilitator@gmail.com">
+            <input type="hidden" name="lc" value="US">
+            <input type="hidden" name="item_name" value="Mowing">
+            <input type="hidden" name="amount" value=@Html.DisplayFor(item => item.CartTotal)>
+            <input type="hidden" name="currency_code" value="USD">
+            <input type="hidden" name="button_subtype" value="services">
+            <input type="hidden" name="bn" value="PP-BuyNowBF:btn_buynow_LG.gif:NonHosted">
+            <input type="image" src="https://www.sandbox.paypal.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+            <img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
+            <input type="hidden" name="return" value="http://localhost:4889/Checkout/Complete">
+            <input type="hidden" name="cbt" value="Return to Greenlight" src="http://localhost:4889/Checkout/Complete">
+        </form>
     }
 }
